log
Thu 28 Mar 2024 08:35:24 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
568221c
Thu 28 Mar 2024 08:37:21 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
600201c
Thu 28 Mar 2024 08:37:40 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
3ba7257
Thu 28 Mar 2024 08:39:09 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
ecb4e16
Thu 28 Mar 2024 08:40:49 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
5e79c4a
Thu 28 Mar 2024 08:40:55 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4c5f92
Thu 28 Mar 2024 08:41:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
590016c
Thu 28 Mar 2024 08:41:47 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
71771eb
Thu 28 Mar 2024 08:43:20 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
29610cd
Thu 28 Mar 2024 08:44:56 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
9d84d9d
Thu 28 Mar 2024 08:45:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ccdf2bf
Thu 28 Mar 2024 08:46:08 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
c052097
Thu 28 Mar 2024 08:46:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
49e5ac6
Thu 28 Mar 2024 08:46:54 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3be480e
Thu 28 Mar 2024 08:47:28 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
6ad3a21
Thu 28 Mar 2024 08:47:46 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c0bc04e
Thu 28 Mar 2024 08:47:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7623538
Thu 28 Mar 2024 08:48:51 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
76b269b
Thu 28 Mar 2024 08:54:58 PM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  9|3
total_score: 35/70
9180ea0
Thu 28 Mar 2024 08:58:35 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
dd1122f
Thu 28 Mar 2024 08:58:51 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
5b7d0f4
Thu 28 Mar 2024 09:06:12 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
7bcdc5c
Thu 28 Mar 2024 09:08:03 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
1f694c2
Thu 28 Mar 2024 09:10:58 PM UTC: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  0|0
64e8d31
Thu 28 Mar 2024 09:11:31 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
7fb8870
Thu 28 Mar 2024 09:12:10 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  12|0
total_score: 70/70
af71984
